BusOne02/src/objects/Events_Management_Settings_vod__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Veeva Events Management</description>
    <fields>
        <fullName>ATTENDEE_ROLLUP_STATUS_FILTER_vod__c</fullName>
        <defaultValue>&quot;ATTENDEE_ROLLUP_STATUS_FILTER;;EVENT_MANAGEMENT&quot;</defaultValue>
        <label>ATTENDEE_ROLLUP_STATUS_FILTER_vod</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Automatch_Mode_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the behavior of automatching attendees that need reconciliation to a system account or user record</description>
        <label>Attendee_Automatch_Mode_vod</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BULK_ADD_ATTENDEE_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Determines whether the bulk add feature can be used with the Attendee Selection page.

    0: Feature is disabled

    1: Feature is enabled</description>
        <label>Bulk Add Attendee</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MASS_UPDATE_ATTENDEE_FIELDS_vod__c</fullName>
        <label>MASS_UPDATE_ATTENDEE_FIELDS_vod</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPEAKER_ROLLUP_STATUS_FILTER_vod__c</fullName>
        <defaultValue>&quot;SPEAKER_ROLLUP_STATUS_FILTER;;EVENT_MANAGEMENT&quot;</defaultValue>
        <description>Comma separated list of values to limit the selection of EM_Event_Speaker_vod records based on Status_vod values for counting Year_to_Date_Utilization_vod and showing recent Events on the Speaker selection screen.</description>
        <label>SPEAKER_ROLLUP_STATUS_FILTER_vod</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Events Management Settings</label>
</CustomObject>